force-app/main/default/objects/Partner_Program_Enrollment__c/Partner_Program_Enrollment__c.object-meta.xml
<CustomObject>
    <description>GTMS-26117: Created as part of Partners H1 project to store the Partner enrollment data for each partner program</description>
    <label>Partner Program Enrollment</label>
    <nameField>
        <label>Partner Program Enrollment Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Partner Program Enrollments</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>