force-app/main/default/objects/Partner_Program_Enrollment__c/fields/Covered_Units__c.field-meta.xml
<CustomField>
    <fullName>Covered_Units__c</fullName>
    <description>GTMS-26117: Created as part of Partners project H1</description>
    <inlineHelpText>Please select the products covered by this Partner&apos;s subsidy program</inlineHelpText>
    <label>Covered Units</label>
    <length>255</length>
    <type>Text</type>
</CustomField>