force-app/main/default/objects/Partner_Program_Enrollment__c/fields/Influence_Payout_Cap__c.field-meta.xml
<CustomField>
    <fullName>Influence_Payout_Cap__c</fullName>
    <description>GTMS-26117: Created as part of Partners project H1</description>
    <inlineHelpText>Please add the &apos;Per Account&apos; payout cap for the Influence terms of this Partner.</inlineHelpText>
    <label>Influence Payout Cap</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>