force-app/main/default/objects/Partner_Program_Enrollment__c/fields/Influence_Payout_Fee__c.field-meta.xml
<CustomField>
    <fullName>Influence_Payout_Fee__c</fullName>
    <description>GTMS-26117: Created as part of Partners H1 project</description>
    <inlineHelpText>Please add the flat rate payout this partner should receive when approved for an Influenced Payout.</inlineHelpText>
    <label>Influence Payout Fee</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>