force-app/main/default/objects/Partner_Program_Enrollment__c/fields/Influence_Payout_Model__c.field-meta.xml
<CustomField>
    <fullName>Influence_Payout_Model__c</fullName>
    <description>GTMS-26117: Created as part of Partners project H1</description>
    <label>Influence Payout Model</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Percentage</fullName>
            </value>
            <value>
                <fullName>Flat Rate</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>