force-app/main/default/objects/Partner_Program_Enrollment__c/fields/Influence_Payout_Percentage__c.field-meta.xml
<CustomField>
    <fullName>Influence_Payout_Percentage__c</fullName>
    <description>GTMS-26117: Created as part of Partners project H1</description>
    <label>Influence Payout Percentage</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>