force-app/main/default/objects/Partner_Program_Enrollment__c/fields/Last_Review_Date__c.field-meta.xml
<CustomField>
    <fullName>Last_Review_Date__c</fullName>
    <description>GTMS-26117: Created as part of Partners project H1</description>
    <label>Last Review Date</label>
    <type>Date</type>
</CustomField>