force-app/main/default/objects/Partner_Program_Enrollment__c/fields/Partner_Account__c.field-meta.xml
<CustomField>
    <fullName>Partner_Account__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>GTMS-26117: Created as part of Partners Project H1</description>
    <inlineHelpText>This field is populated through the &apos;Enroll a Partner&apos; workflow and should be not changed once the enrollment is created.</inlineHelpText>
    <label>Partner Account</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Account.Partner_Status__c</field>
            <operation>equals</operation>
            <value>Transacting Partner</value>
        </filterItems>
        <infoMessage>Please select on Active Partners.</infoMessage>
        <isOptional>true</isOptional>
    </lookupFilter>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Partner Program Enrollments</relationshipLabel>
    <relationshipName>Partner_Program_Enrollments</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>