force-app/main/default/objects/Partner_Program_Enrollment__c/fields/Partner_Discount__c.field-meta.xml
<CustomField>
    <fullName>Partner_Discount__c</fullName>
    <description>GTMS-26117: Created as part of Partners project H1</description>
    <inlineHelpText>Please indicate the minimum customer discount for opportunities that are related to this partner&apos;s program enrollment.</inlineHelpText>
    <label>Partner Discount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>