force-app/main/default/objects/Partner_Program_Enrollment__c/fields/Partner_Program__c.field-meta.xml
<CustomField>
    <fullName>Partner_Program__c</fullName>
    <description>GTMS-26117: Created as part of Partners H1 project</description>
    <inlineHelpText>Please select the appropriate program from the available list. If you do not see the program you want it is because the Partner is not yet actively enrolled.</inlineHelpText>
    <label>Partner Program</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Partner_Program__c.Program_Status__c</field>
            <operation>contains</operation>
            <value>Pilot, Active</value>
        </filterItems>
        <isOptional>true</isOptional>
    </lookupFilter>
    <referenceTo>Partner_Program__c</referenceTo>
    <relationshipLabel>Partner Program Enrollments</relationshipLabel>
    <relationshipName>Partner_Program_Enrollments</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>