force-app/main/default/objects/Partner_Program_Enrollment__c/fields/Partner_Program_Status__c.field-meta.xml
<CustomField>
    <fullName>Partner_Program_Status__c</fullName>
    <description>GTMS-26117: Created as part of Partners project H1</description>
    <formula>TEXT(Partner_Program__r.Program_Status__c)</formula>
    <inlineHelpText>This field displays the current status of the parent program. Terminated programs are not eligible for term updates or renegotians.</inlineHelpText>
    <label>Partner Program Status</label>
    <type>Text</type>
</CustomField>