force-app/main/default/objects/Partner_Program_Enrollment__c/fields/SalesProgramType__c.field-meta.xml
<CustomField>
    <fullName>SalesProgramType__c</fullName>
    <description>GTMS-26936: Created as part of Partners H1 project to store Sales Program Type values from Partner Program object</description>
    <label>Sales Program Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Subsidy</fullName>
            </value>
            <value>
                <fullName>Premium Discount</fullName>
            </value>
            <value>
                <fullName>Unpaid Referral</fullName>
            </value>
            <value>
                <fullName>Paid Referral</fullName>
            </value>
            <value>
                <fullName>Resale</fullName>
            </value>
            <value>
                <fullName>Whitelabel</fullName>
            </value>
            <value>
                <fullName>Teaming</fullName>
            </value>
            <value>
                <fullName>ISV</fullName>
            </value>
            <value>
                <fullName>Install</fullName>
                <isActive>false</isActive>
                <label>Install</label>
            </value>
            <value>
                <fullName>OEM Resale</fullName>
                <isActive>false</isActive>
                <label>OEM Resale</label>
            </value>
            <value>
                <fullName>Upfitter</fullName>
                <isActive>false</isActive>
                <label>Upfitter</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>