force-app/main/default/objects/Partner_Program_Enrollment__c/fields/Sourced_Payout_Fee__c.field-meta.xml
<CustomField>
    <fullName>Sourced_Payout_Fee__c</fullName>
    <description>GTMS-26117: Created as part of Partners project H1</description>
    <label>Sourced Payout Fee</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>