force-app/main/default/objects/Partner_Program_Enrollment__c/fields/Sourced_Payout_Model__c.field-meta.xml
<CustomField>
    <fullName>Sourced_Payout_Model__c</fullName>
    <label>Sourced Payout Model</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Percentage</fullName>
            </value>
            <value>
                <fullName>Flat Rate</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>