force-app/main/default/objects/Partner_Program_Enrollment__c/validationRules/Sourced_Payout_Fee_Needed.validationRule-meta.xml
<ValidationRule>
    <fullName>Sourced_Payout_Fee_Needed</fullName>
    <active>true</active>
    <description>GTMS-26117: Created as part of Partners H1 project to throw error if Source Payout Fee field is empty when Source Payout Model is selected as Flat Fee</description>
    <errorConditionFormula>AND(
ISPICKVAL(Sourced_Payout_Model__c,&apos;Flat Rate&apos;),
				OR(
			    	ISNULL(Sourced_Payout_Fee__c),
								Sourced_Payout_Fee__c &lt;= 0
				)

)</errorConditionFormula>
    <errorDisplayField>Sourced_Payout_Fee__c</errorDisplayField>
    <errorMessage>You’ve selected ‘Flat Rate’ for the Sourced Payout Model, but have not included the desired fee amount. Please update the &apos;Sourced Payout Fee” to a number greater than 0 to save this program.</errorMessage>
</ValidationRule>