force-app/main/default/objects/Partner_Program_Enrollment__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Partner_Account__c</columns>
    <columns>Partner_Program__c</columns>
    <columns>SalesProgramType__c</columns>
    <columns>Minimum_Customer_Discount__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>